[gd_scene load_steps=6 format=2]

[ext_resource path="res://Art/UI/button_large.png" type="Texture" id=1]
[ext_resource path="res://Scripts/TextureButton.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Start_Menu.gd" type="Script" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://font/kirbyss.ttf"

[sub_resource type="DynamicFont" id=2]
size = 90
font_data = SubResource( 1 )

[node name="Start_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 214.002
margin_top = 1.7818
margin_right = 824.002
margin_bottom = 598.782
focus_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="VBoxContainer"]
modulate = Color( 0.87451, 0.87451, 0.87451, 1 )
margin_left = 6.0
margin_top = 63.0
margin_right = 604.0
margin_bottom = 296.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 1 )
stretch_mode = 3
script = ExtResource( 2 )
start_focus = true
normal_color = Color( 0.87451, 0.87451, 0.87451, 1 )
focus_color = Color( 1, 1, 1, 1 )
pressed_color = Color( 0.870588, 0.894118, 1, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/TextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 46.0
margin_top = 79.0
margin_right = -52.0
margin_bottom = -74.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/selection_color = Color( 0.647059, 0.67451, 0.737255, 1 )
bbcode_enabled = true
bbcode_text = "[center]Start[/center]"
text = "Start"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton3" type="TextureButton" parent="VBoxContainer"]
visible = false
modulate = Color( 0.87451, 0.87451, 0.87451, 1 )
margin_left = 6.0
margin_top = 237.0
margin_right = 604.0
margin_bottom = 470.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 1 )
stretch_mode = 3
script = ExtResource( 2 )
normal_color = Color( 0.87451, 0.87451, 0.87451, 1 )
focus_color = Color( 1, 1, 1, 1 )
pressed_color = Color( 0.870588, 0.894118, 1, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/TextureButton3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.1716
margin_top = 73.3848
margin_right = -33.8284
margin_bottom = -79.6152
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/selection_color = Color( 0.647059, 0.67451, 0.737255, 1 )
bbcode_enabled = true
bbcode_text = "[center]Continue[/center]"
text = "Continue"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="VBoxContainer"]
modulate = Color( 0.87451, 0.87451, 0.87451, 1 )
margin_top = 300.0
margin_right = 610.0
margin_bottom = 533.0
texture_normal = ExtResource( 1 )
script = ExtResource( 2 )
normal_color = Color( 0.87451, 0.87451, 0.87451, 1 )
focus_color = Color( 1, 1, 1, 1 )
pressed_color = Color( 0.870588, 0.894118, 1, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/TextureButton2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 54.0
margin_top = 82.0
margin_right = -55.0
margin_bottom = -71.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/selection_color = Color( 0.647059, 0.67451, 0.737255, 1 )
bbcode_enabled = true
bbcode_text = "[center]Quit[/center]"
text = "Quit"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="VBoxContainer/TextureButton" to="VBoxContainer/TextureButton" method="_on_TextureButton_button_down"]
[connection signal="button_up" from="VBoxContainer/TextureButton" to="VBoxContainer/TextureButton" method="_on_TextureButton_button_up"]
[connection signal="focus_entered" from="VBoxContainer/TextureButton" to="VBoxContainer/TextureButton" method="_on_TextureButton_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/TextureButton" to="VBoxContainer/TextureButton" method="_on_TextureButton_focus_exited"]
[connection signal="pressed" from="VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="button_down" from="VBoxContainer/TextureButton3" to="VBoxContainer/TextureButton3" method="_on_TextureButton_button_down"]
[connection signal="button_up" from="VBoxContainer/TextureButton3" to="VBoxContainer/TextureButton3" method="_on_TextureButton_button_up"]
[connection signal="focus_entered" from="VBoxContainer/TextureButton3" to="VBoxContainer/TextureButton3" method="_on_TextureButton_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/TextureButton3" to="VBoxContainer/TextureButton3" method="_on_TextureButton_focus_exited"]
[connection signal="pressed" from="VBoxContainer/TextureButton3" to="." method="_on_TextureButton3_pressed"]
[connection signal="button_down" from="VBoxContainer/TextureButton2" to="VBoxContainer/TextureButton2" method="_on_TextureButton_button_down"]
[connection signal="button_up" from="VBoxContainer/TextureButton2" to="VBoxContainer/TextureButton2" method="_on_TextureButton_button_up"]
[connection signal="focus_entered" from="VBoxContainer/TextureButton2" to="VBoxContainer/TextureButton2" method="_on_TextureButton_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/TextureButton2" to="VBoxContainer/TextureButton2" method="_on_TextureButton_focus_exited"]
[connection signal="pressed" from="VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
